--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,9 +2,8 @@ name: ItemsXL
 main: io.github.dre2n.itemsxl.ItemsXL
 version: ${project.version}
 author: Daniel Saukel
-description: ${project.description}
+description: ${project.description}${buildNo}
 website: ${project.url}
-softdepend: [BlueRoseCommons]
 commands:
   itemsxl:
     description: ItemsXL core command.
