--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>de.erethon</groupId>
     <artifactId>itemsxl</artifactId>
-    <version>0.5.4</version>
+    <version>0.5.5</version>
     <packaging>jar</packaging>
     <name>ItemsXL</name>
     <url>https://dre2n.github.io</url>
@@ -45,7 +45,7 @@
                         <configuration>
                             <artifactSet>
                                 <includes>
-                                    <include>de.erethon:commons</include>
+                                    <include>de.erethon.commons:commons-dist</include>
                                     <include>de.erethon:caliburn</include>
                                 </includes>
                             </artifactSet>
@@ -63,9 +63,9 @@
     </build>
     <dependencies>
         <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>bukkit</artifactId>
-            <version>1.13.2-R0.1-SNAPSHOT</version>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
+            <version>1.14.2-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -75,9 +75,9 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>de.erethon</groupId>
-            <artifactId>commons</artifactId>
-            <version>5.1.4</version>
+            <groupId>de.erethon.commons</groupId>
+            <artifactId>commons-dist</artifactId>
+            <version>6.0</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
