--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,14 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>de.erethon</groupId>
     <artifactId>itemsxl</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.6-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>ItemsXL</name>
     <url>https://dre2n.github.io</url>
     <description>A plugin to create and (de-) serialize custom items and mobs.</description>
     <properties>
         <buildNo></buildNo>
+        <apiVersion>1.0-SNAPSHOT</apiVersion>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -70,7 +71,7 @@
         <dependency>
             <groupId>de.erethon</groupId>
             <artifactId>caliburn</artifactId>
-            <version>${project.version}</version>
+            <version>${apiVersion}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
