--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
                             <artifactSet>
                                 <includes>
                                     <include>de.erethon.commons:commons-dist</include>
+                                    <include>de.erethon.vignette:vignette-dist</include>
                                     <include>de.erethon:caliburn</include>
                                 </includes>
                             </artifactSet>
@@ -53,6 +54,8 @@
                                 <relocation>
                                     <pattern>de.erethon.headlib</pattern>
                                     <shadedPattern>de.erethon.itemsxl.util.headlib</shadedPattern>
+                                    <pattern>de.erethon.vignette</pattern>
+                                    <shadedPattern>de.erethon.itemsxl.util.vignette</shadedPattern>
                                 </relocation>
                             </relocations>
                         </configuration>
@@ -78,6 +81,9 @@
             <groupId>de.erethon.commons</groupId>
             <artifactId>commons-dist</artifactId>
             <version>6.1</version>
+            <groupId>de.erethon.vignette</groupId>
+            <artifactId>vignette-dist</artifactId>
+            <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
