--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <description>A plugin to create and (de-) serialize custom items and mobs.</description>
     <properties>
         <buildNo></buildNo>
-        <apiVersion>1.0-SNAPSHOT</apiVersion>
+        <apiVersion>1.0-RC-01</apiVersion>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
