--- a/pom.xml
+++ b/pom.xml
@@ -2,14 +2,14 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>de.erethon</groupId>
     <artifactId>itemsxl</artifactId>
-    <version>0.6-SNAPSHOT</version>
+    <version>0.6</version>
     <packaging>jar</packaging>
     <name>ItemsXL</name>
     <url>https://dre2n.github.io</url>
     <description>A plugin to create and (de-) serialize custom items and mobs.</description>
     <properties>
         <buildNo></buildNo>
-        <apiVersion>1.0-RC-01</apiVersion>
+        <apiVersion>1.0-RC-02</apiVersion>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -86,7 +86,7 @@
         <dependency>
             <groupId>de.erethon.vignette</groupId>
             <artifactId>vignette-dist</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0-SNAPSHOT-23</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
